fix the madrigal cukes